--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <a href="#intro-panel" class="mdl-tabs__tab">Overview</a>
           <a href="#people-panel" class="mdl-tabs__tab">People</a>
           <a href="#timeline-panel" class="mdl-tabs__tab">Timeline</a>
+          <a href="#impact-panel" class="mdl-tabs__tab">Impact</a>
           <a href="#eee-panel" class="mdl-tabs__tab">Exchange</a>
           <a href="#research-panel" class="mdl-tabs__tab">Research</a>
       </div>
@@ -56,28 +57,28 @@
               </p>
               <p class="quote">"If I have seen further, it is by standing on the shoulders of giants."</p>
               <p class="source">- Issac Newton in a letter to Robert Hooke (15 February 1676)</p>
-              <p>The early beginnings of the internet are often attributed to ARPANET, a early packet switching ( where data is sent in small "packets" to a final destination)<a class="endnote" href="endnotes.pdf">[3]</a> network, and the first to use TCP/IP (the core protocols for communication on the internet). ARPANET was funded by the US Department of Defense. Robert Kahn joined DARPA in 1972 and introduced the idea of open-architecture networking, which focused on allowing any computer to communicate with each other regardless of hardware. The current protocol being developed, NCP, was unable to provide reliability in case any data was lost during transmission, and it was rather rigid and limited. <a class="endnote" href="endnotes.pdf">[1]</a></p>
-              <img src="01.jpg" class="content-img" style="width:800px;">
-              <p class="source">"An IMP log excerpt kept at UCLA that describes setting up a message transmission from the UCLA SDS Sigma 8 host computer to the SRI SDS 940 host computer. The initials 'CSK' to the right stand for Charles S Kline." <a class="endnote" href="endnotes.pdf">[8]</a> </p>
-              <p>A new protocol had to be developed which was able to follow four proposed rules which can be summarized as follows: <a class="endnote" href="endnotes.pdf">[1]</a></p>
+              <p>The early beginnings of the internet are often attributed to ARPANET, a early packet switching ( where data is sent in small "packets" to a final destination)<a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[3]</a> network, and the first to use TCP/IP (the core protocols for communication on the internet). ARPANET was funded by the US Department of Defense. Robert Kahn joined DARPA in 1972 and introduced the idea of open-architecture networking, which focused on allowing any computer to communicate with each other regardless of hardware. The current protocol being developed, NCP, was unable to provide reliability in case any data was lost during transmission, and it was rather rigid and limited. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[1]</a></p>
+              <img src="https://github.com/braeden123/NHD-website/raw/master/01.jpg" class="content-img" style="width:800px;">
+              <p class="source">"An IMP log excerpt kept at UCLA that describes setting up a message transmission from the UCLA SDS Sigma 8 host computer to the SRI SDS 940 host computer. The initials 'CSK' to the right stand for Charles S Kline." <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[8]</a> </p>
+              <p>A new protocol had to be developed which was able to follow four proposed rules which can be summarized as follows: <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[1]</a></p>
               <ol>
                 <li>A network should be able to stand on its own and connect to the internet without changes</li>
                 <li>Packets (the small pieces of data) should be retransmitted if lost</li>
                 <li>Black boxes (later renamed to routers and gateways) would manage the flow of data but not store any information</li>
                 <li>There has to be no global control of the protocols operation</li>
               </ol>
-              <img src="02.jpg" class="content-img" style="width:800px;">
-              <p class="source">ARPANET Logical Map, March 1977 <a class="endnote" href="endnotes.pdf">[9]</a></p>
+              <img src="https://github.com/braeden123/NHD-website/raw/master/02.jpg" class="content-img" style="width:800px;">
+              <p class="source">ARPANET Logical Map, March 1977 <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[9]</a></p>
               <p>
-              In 1973 Bob Kahn asked Vint Cerf to assist him in the development of the TCP/IP protocol as Cerf had been deeply involved in the design of NCP. As they worked together, they developed a paper, which only focused on TCP, which controls the transport and forwarding of data on the internet. This function alone for a while until it was realized that certain packet losses should be ignored, and IP was born to manage the addressing and the forwarding of packets, while TCP handled flow and recovery of packets. <a class="endnote" href="endnotes.pdf">[1]</a>
+              In 1973 Bob Kahn asked Vint Cerf to assist him in the development of the TCP/IP protocol as Cerf had been deeply involved in the design of NCP. As they worked together, they developed a paper, which only focused on TCP, which controls the transport and forwarding of data on the internet. This function alone for a while until it was realized that certain packet losses should be ignored, and IP was born to manage the addressing and the forwarding of packets, while TCP handled flow and recovery of packets. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[1]</a>
               </p>
-              <img src="03.png" class="content-img" style="width:500px;">
-              <p class="source">A diagram of packets from the original paper laying our TCP by Robert Kahn and Vint Cerf<a class="endnote" href="endnotes.pdf">[10]</a></p>
+              <img src="https://github.com/braeden123/NHD-website/raw/master/03.png" class="content-img" style="width:500px;">
+              <p class="source">A diagram of packets from the original paper laying our TCP by Robert Kahn and Vint Cerf<a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[10]</a></p>
               <p>
-              With a 3 contracts from DARPA teams (one lead by Cerf) began developing detailed specification for TCP/IP and simplified it down to run on desktop PC's, which were becoming increasingly popular. As the network scaled in size, modifications were made, and by 1985, the internet had become well established as a community for researchers and developers and in a short while the cohesive and scalable network which had been developed eventually grew into the internet we know it today. <a class="endnote" href="endnotes.pdf">[1]</a>
+              With a 3 contracts from DARPA teams (one lead by Cerf) began developing detailed specification for TCP/IP and simplified it down to run on desktop PC's, which were becoming increasingly popular. As the network scaled in size, modifications were made, and by 1985, the internet had become well established as a community for researchers and developers and in a short while the cohesive and scalable network which had been developed eventually grew into the internet we know it today. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[1]</a>
               </p>
               <p class="quote">"The Internet is becoming the town square for the global village of tomorrow"</p>
-              <p class="source">- Bill Gates <a class="endnote" href="endnotes.pdf">[11]</a></p>
+              <p class="source">- Bill Gates <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[11]</a></p>
           </div>
         </div>
       </div>
@@ -86,7 +87,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="crumbs mdl-color-text--grey-500">
-              A couple of core pieces of history <a class="endnote" href="endnotes.pdf">[2]</a>
+              A couple of core pieces of history <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[2]</a>
             </div>
               <section id="timeline" class="timeline-outer">
                 <div class="container" id="content">
@@ -136,23 +137,53 @@
             <center><h1>
               Fathers of the Internet
             </h1></center>
-            <img src="04.jpg" class="content-img" style="width:500px;">
-            <p class="source">Vint Cerf (LEFT) and Robert Kahn (RIGHT)<a class="endnote" href="endnotes.pdf">[12]</a></p>
+            <img src="https://github.com/braeden123/NHD-website/raw/master/04.jpg" class="content-img" style="width:500px;">
+            <p class="source">Vint Cerf (LEFT) and Robert Kahn (RIGHT)<a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[12]</a></p>
             <h3>Robert E Kahn</h3>
             <p class="quote"> "It wasn't just a transmission, it was a whole system of network protocols being demonstrated over three different networks."</p>
-            <p class="source">- Bob Kahn describing the successful test of 3 networks with TCP/IP <a class="endnote" href="endnotes.pdf">[4]</a></p>
+            <p class="source">- Bob Kahn describing the successful test of 3 networks with TCP/IP <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[4]</a></p>
             <p>
-              Born in 1938, Robert Kahn worked at BBN which built hardware which was used in ARPANET, like the IMP. In 1972, Kahn joined ARPA, which oversaw ARPANET, and in 1973, he recruited Vint Cerf to help him design a protocol which worked to connect all different types of computers and in May 1974, the TCP/IP paper was published. Eventually in 1977, a message was sent from van to satellite between 3 networks as a proof of concept. <a class="endnote" href="endnotes.pdf">[4]</a> After spending 13 years at DRPA, he founded the Corporation for National Research initiatives which developes information technologies for public good in 1986 and has been the Chairman, CEO and President ever since. <a class="endnote" href="endnotes.pdf">[5]</a>
+              Born in 1938, Robert Kahn worked at BBN which built hardware which was used in ARPANET, like the IMP. In 1972, Kahn joined ARPA, which oversaw ARPANET, and in 1973, he recruited Vint Cerf to help him design a protocol which worked to connect all different types of computers and in May 1974, the TCP/IP paper was published. Eventually in 1977, a message was sent from van to satellite between 3 networks as a proof of concept. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[4]</a> After spending 13 years at DRPA, he founded the Corporation for National Research initiatives which developes information technologies for public good in 1986 and has been the Chairman, CEO and President ever since. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[5]</a>
             </p>
-            <img src="05.jpg" class="content-img" style="width:800px;">
-            <p class="source">Called IMPs, built by BBN they eventually evolve into routers, at the time a core peice of hardware for ARPANET <a class="endnote" href="endnotes.pdf">[13]</a></p>
+            <img src="https://github.com/braeden123/NHD-website/raw/master/05.jpg" class="content-img" style="width:800px;">
+            <p class="source">Called IMPs, built by BBN they eventually evolve into routers, at the time a core peice of hardware for ARPANET <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[13]</a></p>
               <p>
             <h3>Vinton Gray Cerf</h3>
             <p class="quote">"We never, ever in the history of mankind have had access to so much information so quickly and so easily."</p>
-            <p class="source">- Vint Cerf <a class="endnote" href="endnotes.pdf">[7]</a></p>
+            <p class="source">- Vint Cerf <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[7]</a></p>
             <p>
-            Born in 1943, Vint Cerf is also considered to be a father of the internet. Cerf studied at Stanford, worked at IBM, attended UCLA and returned to Stanford to complete his doctorate in computer science. In 1973 he was approached by Kahn while being a professor at stanford, to help him design the network. After leaving DARPA in 1982, he became a VP at MCI and later CNRI, where Khan was president. After a couple of other roles, he became the Chief Internet Evangelist at Google in 2005 and continues to be there till this day. <a class="endnote" href="endnotes.pdf">[6]</a>
+            Born in 1943, Vint Cerf is also considered to be a father of the internet. Cerf studied at Stanford, worked at IBM, attended UCLA and returned to Stanford to complete his doctorate in computer science. In 1973 he was approached by Kahn while being a professor at stanford, to help him design the network. After leaving DARPA in 1982, he became a VP at MCI and later CNRI, where Khan was president. After a couple of other roles, he became the Chief Internet Evangelist at Google in 2005 and continues to be there till this day. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[6]</a>
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="mdl-tabs__panel" id="impact-panel">
+        <div class="container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <div class="crumbs mdl-color-text--grey-500">
+              Impact
+            </div>
+            <h3>The Internet Effect</h3>
+            <img src="https://github.com/braeden123/NHD-website/raw/master/07.jpg" class="content-img" style="width:800px;">
+            <p class="source">A graph showing the rapid growth of internet adoption as of 2014 <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[17]</a></p>
+            <p>
+            With an estimated 3.3 billion people or just under 50% of the worlds population on the internet, there is no doubt of it's vast impact. <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[16]</a>
+            </p>
+            <h4>
+            Here are just of few of the impacts of the internet: <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[18]</a>
+            </h4>
+            <ul>
+              <div class="bullets">
+                <li>Expanding the possiblities of education both technologically and creativley</li>
+                <li>Allowed for learning to take place anywhere for anyone free of charge</li>
+                <li>Lets both patients and doctors communcaite and understand</li>
+                <li>Rrevoltionized the way we shop for goods</li>
+                <li>Allows friends and relatives to instanly communicate</li>
+                <li>Has accounted for 21% GPD growth in the last 5 years <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[19]</a></li>
+                <li>Changed the way relationships and dating works</li>
+              </div>
+            </ul>
           </div>
         </div>
       </div>
@@ -165,12 +196,25 @@
             </div>
             <h3>Collaboration and Communication</h3>
             <p class="quote">"New capabilities emerge just by virtue of having smart people with access to state-of-the-art technology" </p>
-            <p class="source">- Bob Kahn <a class="endnote" href="endnotes.pdf">[14]</a></p>
+            <p class="source">- Bob Kahn <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[14]</a></p>
             <p>
               The creation of the internet is a powerful example of how the exchange of information through collaboration allows groundbreaking things to be built. The development of the TCP/IP protocol required numerous people to come together and exchange their ideas and their research in order to further their work towards an ultimate goal. Most notably Robert E Kahn and Vinton Gray Cerf worked collaboratively given their separate expertise/experience to create a brand new protocol which revolutionized the way information can be transferred and laid the groundwork for the internet.
             </p>
-            <img src="06.gif" class="content-img" style="width:500px;">
-            <p class="source">ARPANET with 4 nodes <a class="endnote" href="endnotes.pdf">[15]</a></p>
+            <img src="https://github.com/braeden123/NHD-website/raw/master/06.gif" class="content-img" style="width:500px;">
+            <p class="source">ARPANET with 4 nodes <a class="endnote" href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">[15]</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="mdl-tabs__panel" id="research-panel">
+        <div class="container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <div class="crumbs mdl-color-text--grey-500">
+              Research
+            </div>
+            <h4><a href="https://github.com/braeden123/NHD-website/raw/master/ProcessPaper.pdf">Process Paper</a></h4>
+            <h4><a href="https://github.com/braeden123/NHD-website/raw/master/annotated.pdf">Annotated Bibliography</a></h4>
+            <h4><a href="https://github.com/braeden123/NHD-website/raw/master/endnotes.pdf">Endnotes</a></h4>
           </div>
         </div>
       </div>
@@ -252,6 +296,9 @@
       margin-top: 40px;
       margin-bottom: 40px;
       border-radius: 1%;
+    }
+    .bullets {
+      font-size: 150%;
     }
     /*——————————————
 Global
