--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.indigo-red.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <title>The Internet</title>
+    <link rel="shortcut icon" type="image/png" href="https://github.com/braeden123/NHD-website/raw/master/fav.png"/>
   </head>
   <body>
      <div class="mdl-layout__header-row" id="title">
