--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>The Internet</title>
-    <link rel="shortcut icon" type="image/png" href="https://github.com/braeden123/NHD-website/raw/master/fav.png"/>
+    <link rel="shortcut icon" type="image/png" href="https://github.com/braeden123/NHD-website/raw/master/fav.ico"/>
   </head>
   <body>
      <div class="mdl-layout__header-row" id="title">
